[package]
name = "icrc_get_txs"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.8.1"
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["derive"] }
garcon = { version = "0.2", features = ["async"] }
ic-agent = "=0.23.0"
ic-icrc1 = { git = "https://github.com/dfinity/ic" }
num-traits = "0.2.14"
serde_bytes = "0.11.7"
tokio = { version = "1.23.0", features = ["full"] }